# yyy_ball

./: .gitignore  .gitmodules  AGENTS.md  README.md  README_poetry.md  process_posts.py  pyproject.toml  setup_submodules.sh
.github/workflows/: skills_consistency.yml
assets/books/: 孙子兵法_大王与你读兵法.md  孙子兵法_大王与你读兵法_完整版.md  易经_解读_完整版.md  论语_解读_完整版.md
assets/data/: lunyu_column_posts.json  lunyu_details.json  sunzi_bingfa_column_posts.json  sunzi_bingfa_details.json  sunzi_bingfa_posts.json  yijing_column_posts.json  yijing_details.json
crawlers/: crawler.py  crawler_column.py  crawler_lunyu.py  crawler_yijing.py  fetch_details.py  fetch_yijing_details.py  parser_full.py  parser_yijing.py  test_zsxq.py
creator/: ARCHITECTURE_REVIEW.md  README.md
docs/: blue_ocean_migration_analysis.md  blue_ocean_unified_org_analysis.md  cosyvoice_python313_guide.md  cpu_optimization_guide.md  icon_quick_reference.md  publish_workflow.md  scripts_migration.md  talking_head_guide.md  voice_cloning_optimization.md
media-publisher/docs/: wechat_article_02.md  wechat_article_03.md
poetry/jiangnan/: README.md  USAGE.md  ai_prompts.md  generator_html.py  generator_pillow.py  infographic_design.md  poem_info.md  quickstart.sh  tools_comparison.md
profiles/: yyy_ball.yaml
publish/: __init__.py  wx_channel.py
scripts/: add_sadtalker_deps.sh  download_sadtalker_models.sh  generate_lesson10_voice_and_talking_head.py  rehearse_skill_migration.py  rollback_skills.py  sync_skills.py
scripts/tests/: test_skill_evolver.py  test_sync_skills.py
series/prompts/: moneywise_annimate.prompt  moneywise_script.prompt  sunzi_annimate.prompt  sunzi_script.prompt  zsxq_100ke_annimate.prompt  zsxq_100ke_script.prompt
series/sunzi/: run_publish.py
src/animate/: __init__.py  lesson_vertical.py  sunzi_lesson_vertical.py
src/cli/: __init__.py  talking_head.py  voice_clone.py
src/crawlers/: crawler_icons8.py  crawler_lunyu.py  crawler_poetry_bilibili.py  crawler_yijing.py  crawler_zsxq_100.py  fetch_details.py  fetch_lunyu_details.py  (+6 more)
tests/: test_creator.py
utils/: anim_helper.py  cover_generator.py  voice.py
(+495 files in other folders)
