[project]
name = "yyy-ball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av>=13.1.0",
    "conformer==0.3.2",
    "diffusers==0.29.0",
    "edge-tts>=7.2.7",
    "face-alignment==1.3.5",
    "facexlib==0.3.0",
    # "gfpgan>=1.3.8",  # 注意：basicsr 依赖在 Python 3.13 上构建失败，如需使用请手动安装
    "fastapi==0.115.6",
    "fastapi-cli==0.0.4",
    "gdown==5.1.0",
    "gradio==5.4.0",
    "hydra-core==1.3.2",
    "hyperpyyaml==1.2.2",
    "imageio>=2.33",
    "imageio-ffmpeg==0.4.7",
    "inflect==7.3.1",
    "jinja2>=3.1.6",
    "kornia==0.6.8",
    "librosa==0.10.2",
    "lightning==2.2.4",
    "manim>=0.19.1",
    "modelscope==1.20.0",
    "mutagen>=1.47.0",
    "networkx==3.1",
    "noisereduce>=3.0.3",
    "numba>=0.63.1",
    "omegaconf==2.3.0",
    "onnxruntime>=1.23.2",
    "openai-whisper>=20250625",
    "openpyxl>=3.1.5",
    "pillow",
    "playwright>=1.57.0",
    "pyarrow>=22.0.0",
    "pydub==0.25.1",
    "python-dotenv>=1.2.1",
    "pyworld>=0.3.5",
    "pyyaml>=6.0.3",
    "replicate>=1.0.7",
    "requests>=2.32.5",
    "resampy==0.3.1",
    "safetensors>=0.7.0",
    "scikit-image>=0.24",
    "scipy>=1.16.3",
    "soxr>=1.0.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wget>=3.2",
    "x-transformers==2.11.24",
    "yacs==0.1.8",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    # "cosyvoice>=0.0.8",  # 注意：包构建有问题，需要使用 uv run pip install cosyvoice 手动安装
]
